--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,8 +40,8 @@ jobs:
 
                   cd gitops-k8s
 
-                  git config user.name "saiurakrishna"
-                  git config user.email "saikrishna.ura@gmail.com"
+                  git config user.name "kashyapvishal"
+                  git config user.email "kashyapvishal0418@gmail.com"
 
                   yq e '.spec.template.spec.containers[0].image = "${{secrets.AWS_REPOSITORY_URL}}:${{ env.GITHUB_BRANCH }}" ' -i deployment.apps/nodejs.yaml
 
