--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,13 +38,13 @@ jobs:
                   docker build -t ${{ secrets.AWS_REPOSITORY_URL }}:$GITHUB_REF_NAME-$GITHUB_SHA . 
                   docker push ${{ secrets.AWS_REPOSITORY_URL }}:$GITHUB_REF_NAME-$GITHUB_SHA
 
-                  git clone https://${{ secrets.AWS_GITHUB_USER }}:${{ secrets.AWS_GITHUB_TOKEN }}git@github.com:18april/k8s-nodejs-project.git
+                  git clone https://{{ secrets.AWS_GITHUB_USER }}:${{ secrets.AWS_GITHUB_TOKEN }}@github.com/18april/k8s-nodejs-project.git
 
                   # List the contents of the cloned repository to find the correct directory
-                  ls -la 18april/k8s-nodejs-project
+                  ls -la k8s-nodejs-project
 
                   # Change to the appropriate directory if it exists
-                  cd 18april/k8s-nodejs-project/gitops-k8s || exit 1
+                  cd k8s-nodejs-project/gitops-k8s || exit 1
 
                   git config user.name "kashyapvishal"
                   git config user.email "kashyapvishal0418@gmail.com"
