--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,11 +1,10 @@
 name: Nodejs-docker
 
 on:
-    # Trigger the workflow on push,
-    # but only for the pre-production branch
     push:
         branches:
             - master
+
 env:
     AWS_REPOSITORY_URL: ${{ secrets.AWS_REPOSITORY_URL }}
     GITHUB_TOKEN: ${{ secrets.AWS_GITHUB_TOKEN }}
@@ -15,36 +14,48 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-             - name: configure The IAM cred
-               uses: aws-actions/configure-aws-credentials@v1
-               with:
-                 aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                 aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                 aws-region: us-east-1
+            - name: Configure AWS IAM Credentials
+              uses: aws-actions/configure-aws-credentials@v1
+              with:
+                  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                  aws-region: us-east-1
 
-             - name: Login in to Amazon ECR
-               id: login-ecr
-               uses: aws-actions/amazon-ecr-login@v1  
-             
-             - uses: actions/checkout@v2
-             - name: SER ENV
-               run: echo "GITHUB_BRANCH=$(echo $GITHUB_REF_NAME-$GITHUB_SHA)" >> $GITHUB_ENV
+            - name: Login to Amazon ECR
+              id: login-ecr
+              uses: aws-actions/amazon-ecr-login@v1  
 
-             - name: Build the Docker image
-               run: |
-                  aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 542783570735.dkr.ecr.ap-south-1.amazonaws.com
-                  docker build -t ${{secrets.AWS_REPOSITORY_URL}}:$GITHUB_REF_NAME-$GITHUB_SHA . 
-                  docker push ${{secrets.AWS_REPOSITORY_URL}}:$GITHUB_REF_NAME-$GITHUB_SHA
+            - name: Checkout Repository
+              uses: actions/checkout@v2
 
-                  git clone https://${{secrets.AWS_GITHUB_USER}}:${{secrets.AWS_GITHUB_TOKEN}}@github.com:18april/gitops-k8s.git
+            - name: Set GitHub Branch Environment Variable
+              run: echo "GITHUB_BRANCH=$(echo $GITHUB_REF_NAME-$GITHUB_SHA)" >> $GITHUB_ENV
 
+            - name: Install yq
+              run: |
+                  sudo apt-get update && sudo apt-get install -y python3-pip
+                  pip3 install yq
+
+            - name: Build and Push Docker Image
+              run: |
+                  aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${{ secrets.AWS_REPOSITORY_URL }}
+                  docker build -t ${{ secrets.AWS_REPOSITORY_URL }}:$GITHUB_REF_NAME-$GITHUB_SHA . 
+                  docker push ${{ secrets.AWS_REPOSITORY_URL }}:$GITHUB_REF_NAME-$GITHUB_SHA
+
+            - name: Clone GitOps Repository
+              run: |
+                  git clone https://${{ secrets.AWS_GITHUB_USER }}:${{ secrets.AWS_GITHUB_TOKEN }}@github.com/18april/gitops-k8s.git
+
+            - name: Update Deployment YAML
+              run: |
                   cd gitops-k8s
-
                   git config user.name "18april"
                   git config user.email "kashyapvishal0418@gmail.com"
+                  yq e '.spec.template.spec.containers[0].image = "${{ secrets.AWS_REPOSITORY_URL }}:${{ env.GITHUB_BRANCH }}"' -i deployment.apps/nodejs.yaml
 
-                  yq e '.spec.template.spec.containers[0].image = "${{secrets.AWS_REPOSITORY_URL}}:${{ env.GITHUB_BRANCH }}" ' -i deployment.apps/nodejs.yaml
-
+            - name: Commit and Push Changes
+              run: |
+                  cd gitops-k8s
                   git add .
-                  git commit -m "update the code"
+                  git commit -m "Update the image version"
                   git push --set-upstream origin master
